# llamea-cameralens-workspace

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  analyze_grad.py  backlog.tex  calls_pm.py  cli_plotter.py  document-plan.md  lens_runner_notebook.ipynb  main.py  optimisation_class_parser.py  plot_conv_analytics.py  pyproject.toml  reproduce_400.py  reproduce_400_config.py  reproduce_400_v1.py  reproduce_400_v1_chat.py  reproduce_400_v1_incorrect.py  reproduce_issue_v2.py  rlemmo_verification_plan.md  run_rlemmo_lens.py  smoke_test_logging.py  smoke_test_v2.py  solve_lens.py  sprint_plan.md  test_env_setup_speed.py  test_eval_logic.py  test_gemini_api.py  test_gemini_fix.py  test_lens_subprocess.py  test_performance.py  test_tuple_import.py  verify_workspace.py
.github/workflows/: test-e2e.yml  test-ubuntu.yml
blade-framework/: .coveragerc  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  cameralens_main.py  config.py  contextual_lens_problem.py  lens_rl_env.py  local_lens_problem.py  pyproject.toml  reproduce_import.py  run_lens_comparison.py  run_lens_mvp.py  run_lens_v2.py  run_rlemmo_deep.py  test_api_config.py  test_lens_eval.py
blade-framework/.github/workflows/: docs2pages.yml  publish.yml  test-windows.yml
blade-framework/camera_problem_runs/: lens_comparison.py  lens_mvp.py  lens_v2.py  lens_v3.py  lens_v3_1.py  lens_v3_2.py  lens_v3_2_1.py  lens_v3_2_2.py  lens_v4.py  lens_v4_broad 2.py  lens_v4_long.py  lens_v4_overnight  lens_v4_overnight.py  lens_v4_overnight_5000 2.py  lens_v4_overnight_5000.py  lens_v5.py  lens_v5_a_memetic.py  v4_op_false_10000.py  v4_op_short.py  v4_op_true_10000.py  v4_openprompt_false_500.py  v4_openprompt_true_500.py
blade-framework/docs/: Installation.rst  baselines.rst  benchmarks.rst  conf.py  experiment.rst  index.rst  loggers.rst  plots.rst  solution.rst
blade-framework/docs/notebooks/: custom_method.ipynb  custom_problem.ipynb  getting_started.ipynb  simple_experiment.ipynb
blade-framework/examples/: minimal_example.py  minimal_example_trackio.py  process_bbob_runs.py  run-automl.py  run-mabbob.py  run-sbox.py  run_ollama_client.py  test-kerneltuner.json  visualize_bbob.ipynb  visualize_bbob.py  visualize_kerneltuner.ipynb  visualize_sbox.ipynb
blade-framework/iohblade/: experiment.py  llm.py  method.py  plots.py  problem.py  solution.py  utils.py  webapp.py
blade-framework/iohblade/loggers/: __init__.py  base.py  mlflow.py
blade-framework/iohblade/methods/: __init__.py  funsearch.py  llamea.py  rlemmo.py  rlemmo_deep.py
blade-framework/iohblade/problems/: automl.py  kerneltuner.py  lens_optimisation.py
blade-framework/outcmaes/: parameters.json2  stoppings.json2
blade-framework/run_benchmarks/: auto-correlation.py  circle_packing.py  euclidian_steiner_tree.py  graph_coloring.py  heilbronn_triangle.py  hexagon_packing.py  kissing-11D.py  spherical_code.py  sum_vs_differences.py
blade-framework/tests/unit/: test_behaviour_metrics.py  test_experiment.py  test_lhns.py  test_loggers.py  test_mcts_ahd.py  test_namespace_management.py  test_util.py  test_virtualenv.py
camera-lens-simulation/: .gitmodules  LICENSE  setup.py
camera-lens-simulation/examples/: __init__.py  double-gauss-de-example.ipynb  double_gauss_objective.py
camera-lens-simulation/lensgopt/materials/: refractive_index_catalogs.py
camera-lens-simulation/lensgopt/optics/: loss.py  optics.py  shapes.py
camera-lens-simulation/lensgopt/parsers/: zmax_fmt.py
camera-lens-simulation/lensgopt/utils/: latex-preambula.tex
docs/: Introduction.rst  Quickstart.rst  llm.rst  method.rst  modules.rst  problem.rst  utils.rst  webapp.rst
docs/notebooks/: getting_started.ipynb  mabbob_example.ipynb  visualization_options.ipynb
examples/: minimal_example_trackio.py  run-bbob-logging.py  run-kerneltuner-info.py  run-kerneltuner.py  run-min-max-distance-ratio-mcts.py  run_lens_optimisation.py  run_lhns_example.py  visualize_automl.ipynb  visualize_mabbob.ipynb
iohblade/: __init__.py  assets.py  behaviour_metrics.py  llm.py  mcts_node.py  problem.py  solution.py  webapp.py
iohblade/baselines/: __init__.py  modcma.py
iohblade/benchmarks/analysis/: README.md  __init__.py  auto_correlation_ineq1.py  auto_correlation_ineq2.py
iohblade/benchmarks/combinatorics/: README.md
iohblade/benchmarks/fourier/: get_fourier_problem.py  (+1 more)
iohblade/loggers/: base.py  trackio.py
iohblade/methods/: __init__.py  eoh.py  llamea.py  random_search.py  reevo.py
iohblade/misc/: ast.py  prepare_namespace.py
iohblade/problems/: __init__.py  bbob_sboxcost.py  mabbob.py  photonics.py
lens_blade_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lensgopt/optics/: meta.py  model.py
lensgopt/parsers/: lens_creation.py
lensgopt/visualization/: lens_vis.py
results-documentation/: 17-03_lens_v2_10^-1.py  2026-03-16_mvp_optimiser_code.py  29.03_lens_v3_opt_code.py
results/lens_v2/: progress.json
run_benchmarks/: cvrp.py  erdos-min-overlap.py  heilbronn_convex_region.py  mat_mul.py  min_max_min_distance_ratio.py  rectangle_packing.py  tsp.py  uncertainty_inequality.py  unit_square_packing.py
tests/e2e/: test_completeflow.py
tests/unit/: test_llm.py  test_method.py  test_mlflowlogger.py  test_plots.py  test_problem.py  test_solution.py  test_trackio_logger.py  test_wrap_problem.py
(+193 files in other folders)
