[project]
name = "iohblade"
version = "0.9.0"
description = "Benchmarking Llm Assisted Design and Evolution of algorithms."
authors = [{ name = "Niki van Stein", email = "n.van.stein@liacs.leidenuniv.nl" }]
requires-python = ">=3.11, <4"
readme = "README.md"
license = "MIT"
dependencies = [
    "numpy>=2,<3",
    "pandas>=2.2.3,<3",
    "openai>=1.99.1,<2",
    "anthropic>=0.57,<1",
    "ollama>=0.5.3,<1",
    "jsonlines>=4.0.0,<5",
    "google-genai>=1,<2",
    "joblib>=1.4.2,<2",
    "tokencost>=0.1.26,<0.2",
    "llamea>=1.2.0,<2",
    "mlflow>=3.1.0,<4",
    "python-constraint2>=2.2.3,<3",
    "xmltodict>=0.14.2,<0.15",
    "streamlit>=1.35.0,<2",
    "jsonschema>=4.24.0,<5",
    "plotly>=6.2.0",
    "ioh>=0.3.22",
    "seaborn>=0.13.2",
    "lizard>=1.17.31",
    "networkx>=3.5",
    "smac>=2.3.1",
    "virtualenv>=20.34.0",
    "feedparser>=6.0.12",
]

[project.urls]
Homepage = "https://github.com/XAI-liacs/BLADE"
Repository = "https://github.com/XAI-liacs/BLADE"

[project.scripts]
iohblade-webapp = "iohblade.webapp:main"

[dependency-groups]
dev = [
    "black>=25.11.0,<26",
    "isort>=5.12.0,<6",
    "pytest>=7.4.3,<8",
    "jupyter>=1.0.0,<2",
    "pytest-cov>=4.1.0,<5",
    "codecov>=2.1.13,<3",
    "pytest-mock>=3.14.0,<4",
    "ipykernel>=6.29.5,<7",
]
docs = [
    "sphinx==7.4.7",
    "sphinx-rtd-theme>=3.0.2,<4",
    "myst-parser>=4.0.1,<5",
    "nbsphinx>=0.9.6,<0.10",
    "pandoc~=2.4",
    "furo>=2024.8.6,<2025",
    "sphinxext-opengraph>=0.9.1,<0.10",
    "sphinx-copybutton>=0.5.2,<0.6",
]
methods = [
    "eoh",
    "reevo",
]
extraproblems = [
    "pymoosh==3.2",
    "pyGDM2==1.1.12",
]
apple-silicon = [
    "lmstudio>=1.5.0,<2; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "mlx_lm>=0.30.2,<1; platform_system == 'Darwin' and platform_machine == 'arm64'",
]
kerneltuner = [
    "kernel-tuner",
    "autotuning_methodology",
]
trackio = [
    "trackio>=0.3.2,<1",
]

[tool.uv]
default-groups = [
    "methods",
]

[tool.uv.sources]
eoh = { git = "https://github.com/nikivanstein/EoH", subdirectory = "eoh" , rev = "f0d21b2f2f62c452bac545fd7f68d3af50845321"}
reevo = { git = "https://github.com/nikivanstein/reevo.git", rev = "main" }
kernel-tuner = { git = "https://github.com/KernelTuner/kernel_tuner.git", rev = "ad41cfe99aec44c99ae79b4ececcc7227eb20db2" }
autotuning_methodology = { git = "https://github.com/AutoTuningAssociation/autotuning_methodology.git", rev = "5536c5a4a82fa6f3f14d36e38b8e32baf00b6347" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iohblade"]
include = [
  "iohblade/.streamlit/*",
]


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore::RuntimeWarning",
    "ignore::DeprecationWarning",
]
